-Wsign-compare warnings in FTLLowerDFGToB3.cpp and DFGSpeculativeJIT.cpp https://bugs.webkit.org/show_bug.cgi?id=211783

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2020-05-12
Reviewed by Darin Adler.

This fixes -Wsign-compare warnings introduced in r260331.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileValueBitNot):
* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileValueBitNot):

Canonical link: https://commits.webkit.org/224679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261564 268f45cc-cd09-0410-ab3c-d52691b4dbfc